[package]
name = "gcc-builder"
version = "1.8.0"
edition = "2021"
authors = ["GCC Builder Team"]
description = "A high-performance Rust implementation of the GCC build automation script"
license = "MIT"
repository = "https://github.com/slyfox1186/script-repo"

[dependencies]
clap = { version = "4.0", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
# Using system curl/wget for downloads - more efficient than bundling HTTP client
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
indicatif = "0.17"
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.0"
dirs = "5.0"
semver = "1.0"
walkdir = "2.0"
crossbeam = "0.8"
rayon = "1.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
sys-info = "0.9"
libc = "0.2"
regex = "1.0"
futures = "0.3"
lazy_static = "1.4"

[dependencies.nix]
version = "0.27"
features = ["fs", "process", "signal"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true