[package]
name = "build-gcc"
version = "2.6.0"
edition = "2021"
authors = ["slyfox1186"]
description = "Build GNU GCC from source with async downloads and parallel builds"
license = "MIT"
repository = "https://github.com/slyfox1186/script-repo"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env", "string"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for downloads
reqwest = { version = "0.12", features = ["stream"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Progress bars and spinners
indicatif = "0.17"

# Interactive prompts
dialoguer = "0.11"

# Terminal colors and styling
console = "0.15"

# Secure temporary directories
tempfile = "3"

# Checksums
sha2 = "0.10"

# Archive extraction
tar = "0.4"
xz2 = "0.1"
flate2 = "1"

# Find executables in PATH
which = "7"

# Unix-specific APIs (signals, process, filesystem)
nix = { version = "0.29", features = ["process", "signal", "fs", "user"] }

# System information (RAM, disk, CPU)
sysinfo = "0.33"

# Regex for parsing
regex = "1"

# Timestamps and duration formatting
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }

# Async utilities
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# File locking
fs2 = "0.4"

# Byte formatting (for file sizes)
bytesize = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
